Controller Tests and Actuator added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,23 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #ADMINISTRATION
 admin.email=tasks.addmin@gmail.com
 
+#ACTUATOR ENDPOINTS
+management.endpoints.web.exposure.include=*
+
+#ACTUATOR INFO
+info.app.name=Tasks Application
+info.app.description=Application created to manage boars on Trello
+info.app.version=1.0.0
+info.app.owner.name=Radoslaw
+info.app.owner.surname=Sulikowski
+info.app.administrator.email=task.addmin@gmail.com
+info.app.administrator.address.streat=Sesame Street
+info.app.administrator.address.number=123
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is to make the world a better place!
+info.company.email=task@crud.com
+info.company.phone=555 555 555
+
+
+
+
