--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,9 @@ dependencies {
 	compile 'io.springfox:springfox-swagger-ui:2.7.0'
 
 	compile 'org.springframework.boot:spring-boot-starter-mail:2.1.9.RELEASE'
+
+	compile 'com.google.code.gson:gson:2.8.6'
+
+	compile 'org.springframework.boot:spring-boot-starter-actuator'
+
 }
