--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,7 @@ dependencies {
 
 	compile 'org.springframework.boot:spring-boot-starter-actuator'
 
+	compile 'org.thymeleaf:thymeleaf:3.0.11.RELEASE'
+
+
 }
