email template added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
+admin.name=YoYo
 admin.email=tasks.addmin@gmail.com
 
 #ACTUATOR ENDPOINTS
@@ -39,9 +40,11 @@ info.app.version=1.0.0
 info.app.owner.name=Radoslaw
 info.app.owner.surname=Sulikowski
 info.app.administrator.email=task.addmin@gmail.com
-info.app.administrator.address.streat=Sesame Street
+info.app.administrator.address.street=Sesame Street
 info.app.administrator.address.number=123
 info.company.name=TaskCrudAppCreator
+info.company.address.street=Sesame Street
+info.company.address.number=123
 info.company.goal=Our goal is to make the world a better place!
 info.company.email=task@crud.com
 info.company.phone=555 555 555
